changed feed to contact

--- a/source/js/mapp/templates/feed.pug
+++ b/source/js/mapp/templates/feed.pug
@@ -4,8 +4,7 @@
       // Card Columns Example Social Feed
       .mb-0.mt-4
         i.fa.fa-newspaper-o
-        |  Feed
-        helloWorld
+        |  Contacts
       hr.mt-2
       .card-columns
         div(infinite-scroll='getData()', infinite-scroll-disabled='d.fetching', infinite-scroll-distance='1')
