--- a/source/js/mapp/templates/feed.pug
+++ b/source/js/mapp/templates/feed.pug
@@ -3,7 +3,7 @@
     div.col-lg-6.col-sm-10.col-centered
       .mb-0.mt-4
         i.fa.fa-newspaper-o
-        |  Contacts
+        |  Contacts!
       hr.mt-2
       .card-columns
         div(infinite-scroll='getData()', infinite-scroll-disabled='d.fetching', infinite-scroll-distance='1')
