--- a/source/js/mapp/templates/uploadModal.pug
+++ b/source/js/mapp/templates/uploadModal.pug
@@ -2,7 +2,7 @@
   .modal-dialog
     .modal-content
       .modal-header
-        h5#exampleModalLabel.modal-title Upload Image
+        h5#exampleModalLabel.modal-title Upload Contact List
         button.close(type='button', ng-click='close(false)', data-dismiss='modal', aria-label='Close')
           span(aria-hidden='true') ×
       .modal-body
