--- a/source/js/mapp/templates/feed.pug
+++ b/source/js/mapp/templates/feed.pug
@@ -12,19 +12,45 @@
             |    Master Contacts Table
           .card-body(style="padding:0;")
             .table-responsive
-              table#dataTable.table.table-bordered(width='100%', cellspacing='0')
-                thead
-                  tr
-                    th id
-                    th Name
-                    th Email
-                    th Stage
-                tbody
-                  tr(ng-repeat="data in data.contacts")
-                    td {{data.id}}
-                    td {{data.name}}
-                    td {{data.email}}
-                    td {{data.stage}}
+              #dataTable_wrapper(style="padding:0;").dataTables_wrapper.container-fluid.dt-bootstrap4
+                .row
+                  .col-sm-12
+                    table#dataTable.table.table-bordered(width='100%', cellspacing='0', style="margin-bottom:0;")
+                      thead
+                        tr
+                          th id
+                          th Name
+                          th Email
+                          th Stage
+                          th createdAt
+                      tbody
+                        tr(ng-repeat="data in data.contacts")
+                          td {{data.id}}
+                          td {{data.name}}
+                          td {{data.email}}
+                          td {{data.stage}}
+                          td {{data.createdAt}}
+                .row
+                  .col-sm-6(style="padding:10px 0")
+                    #dataTable_paginate.dataTables_paginate.paging_simple_numbers
+                      ul.pagination
+                        li#dataTable_previous.paginate_button.page-item.previous.disabled
+                          a.page-link(href='#', aria-controls='dataTable', data-dt-idx='0', tabindex='0') Previous
+                        li.paginate_button.page-item.active
+                          a.page-link(href='#', aria-controls='dataTable', data-dt-idx='1', tabindex='0') 1
+                        li.paginate_button.page-item
+                          a.page-link(href='#', aria-controls='dataTable', data-dt-idx='2', tabindex='0') 2
+                        li.paginate_button.page-item
+                          a.page-link(href='#', aria-controls='dataTable', data-dt-idx='3', tabindex='0') 3
+                        li.paginate_button.page-item
+                          a.page-link(href='#', aria-controls='dataTable', data-dt-idx='4', tabindex='0') 4
+                        li.paginate_button.page-item
+                          a.page-link(href='#', aria-controls='dataTable', data-dt-idx='5', tabindex='0') 5
+                        li.paginate_button.page-item
+                          a.page-link(href='#', aria-controls='dataTable', data-dt-idx='6', tabindex='0') 6
+                        li#dataTable_next.paginate_button.page-item.next
+                          a.page-link(href='#', aria-controls='dataTable', data-dt-idx='7', tabindex='0') Next
+
           .card-footer.small.text-muted
             | Updated yesterday at 11:59 PM
 
