--- a/source/js/mapp/templates/feed.pug
+++ b/source/js/mapp/templates/feed.pug
@@ -23,13 +23,20 @@
                           th Email
                           th Stage
                           th createdAt
+                          th(colspan="3")
                       tbody
                         tr(ng-repeat="data in data.contacts")
                           td {{data.id}}
                           td {{data.name}}
                           td {{data.email}}
                           td {{data.stage}}
-                          td {{data.createdAt}}
+                          td {{data.createdAt|date:'shortDate'}}
+                          td 
+                            button add to
+                          td 
+                            button(ng-click="editContactModal(data)") edit
+                          td
+                            button delete
                 .row
                   .col-sm-6(style="padding:10px 0")
                     #dataTable_paginate.dataTables_paginate.paging_simple_numbers
