--- a/source/js/mapp/templates/feed.pug
+++ b/source/js/mapp/templates/feed.pug
@@ -30,15 +30,13 @@
                     table#dataTable.table.table-bordered(width='100%', cellspacing='0', style="margin-bottom:0;")
                       thead
                         tr
-                          th id
                           th Name
                           th Email
                           th Stage
                           th createdAt
-                          th(colspan="3")
+                          th(colspan="3") Actions
                       tbody
                         tr(ng-repeat="data in data.contacts")
-                          td {{data.id}}
                           td {{data.name}}
                           td {{data.email}}
                           td {{data.stage}}
