--- a/source/js/mapp/templates/editLists.pug
+++ b/source/js/mapp/templates/editLists.pug
@@ -14,7 +14,7 @@
             .card-header
               div.row
                 div.col-sm-4
-                  button.btn.btn-success(style="cursor:pointer;", ng-click="newQuery()") Add Parmeter
+                  button.btn.btn-success(style="cursor:pointer;", ng-click="executeQuery()") Execute Query
             .list-group.list-group-flush.small(style="min-height:100px;")
               div(style="text-align: center;", ng-if="(d.list.querymodel.length > 0)")
                 a.list-group-item.list-group-item-action(ng-repeat="param in d.list.querymodel")
