--- a/views/index.pug
+++ b/views/index.pug
@@ -29,6 +29,7 @@ html(lang='en', ng-app="myApp")
             i.fa.fa-fw.fa-user
     .content-wrapper.py-3
       div(ng-view)
+      div#ohsnap
     // JavaScript
     // Custom scripts for this template
     script(src='/js/lib/lib.js')
