--- a/source/js/mapp/templates/lists.pug
+++ b/source/js/mapp/templates/lists.pug
@@ -12,7 +12,7 @@
               div.col-sm-4
                 button.btn.btn-success(style="cursor:pointer;", ng-click="newList()") New List
           .list-group.list-group-flush.small(ng-repeat="list in d.lists", style="cursor:pointer")
-            a.list-group-item.list-group-item-action
+            a.list-group-item.list-group-item-action(href="/index/lists/edit/{{list.id}}")
               div.media
                 div.media-body
                   strong {{list.name}}
