--- a/source/js/mapp/templates/feed.pug
+++ b/source/js/mapp/templates/feed.pug
@@ -42,7 +42,7 @@
                           td {{data.stage}}
                           td {{data.createdAt|date:'shortDate'}}
                           td(style="text-align:center;") 
-                            button.btn.btn-primary(ng-click="sendTo(data)", style="cursor:pointer;") send to
+                            button.btn.btn-primary(ng-click="sendTo(data,$event)", style="cursor:pointer;") send to
                           td(style="text-align:center;") 
                             button.btn.btn-warning(ng-click="editContactModal(data)", style="cursor:pointer;") edit
                           td(style="text-align:center;")
@@ -60,3 +60,4 @@
 
           .card-footer.small.text-muted
             | Updated yesterday at 11:59 PM
+#questionMarkId SHOW ME!
